# misc_stuff

./: LICENSE.md
3rdparty-deps/: MemoryModule.c  sokol_audio.h
compression_testbed/: cpp_linked_list.vcxproj  cpp_linked_list.vcxproj.filters  mudff.map  mudff_packlzma.cpp
cpp_grabbag/: cpp_classes.cpp  cpp_loops.cpp  cpp_uniqueptr.cpp  cpp_vecsandstructs.cpp  main.cpp  main.vcxproj
dup2_plugins/SDK/: dup2.h  dup2patcher.h
dup2_plugins/midiplayer/: midiplayer.sln
dup2_plugins/mp3_dll/: mp3_player.sln
dup2_plugins/nsfplayer/: nsf_player.sln
dup2_plugins/spcplayer/: spc_player.sln
img_flac/: imgquant.sln  main.cpp  project.vcxproj
imgquant/: main.cpp  project.vcxproj
mdkext/: main.cpp
mpk_archiver/: main.cpp  main.vcxproj
msvc_tmpl/: main.cpp  main.vcxproj
mupen64plus-ma-audio/: audio.cpp  audio.h  entrypoint.c  osal_dynamiclib.h  osal_dynamiclib_win32.c  plugin.sln  plugin.vcxproj
nyan/: bass_dll.h  nyan.cpp  nyan.rc  nyan.sln  nyan.vcxproj  nyan_scr.cpp  nyan_tune.h  nyancat.h  rainbow.h  resource.h  stars.h
pdn-oxipng/: L10nStrings.cs  LICENSE.txt  OptiPngFileType.cs  OptiPngSaveConfigToken.cs  OptiPngSaveConfigWidget.cs  OptiPngSaveConfigWidget.ui.cs  README.md  pdn-oxipng.csproj  pdn-oxipng.sln
pdn-oxipng/PaintDotNet/: EtchedLine.cs  HeaderLabel.cs
pdn-oxipng/Properties/: AssemblyInfo.cs
pelock_pluginloader/: compression_test.cpp  compression_test.sln  cpp_linked_list.vcxproj  cpp_linked_list.vcxproj.filters
pelock_pluginloader/CompressionLibrary/: CompressionLibrary.cpp  CompressionLibrary.def  CompressionLibrary.sln  CompressionLibrary.vcxproj  CompressionLibrary.vcxproj.filters  stdafx.h
pj64-parallelrdp/projects/: Makefile
pj64-parallelrdp/src/: glguts.c  parallel_imp.cpp  (+1 more)
radiostream/: .gitignore  fb2k_radiostreamlogger.cpp
radiostream/data_deezexport/: IDE.code-workspace  meson.build  src_batch.py
radiostream/data_deezexport/compile_dir/: stream_hitradio.stdb  stream_wsfm.stdb
radiostream/data_deezexport/src/: main.cpp  picojson.h
scratch/: cli_build.sh  meson.build  scratch.code-workspace  src_batch.py
scratch/src/: main.cpp
setwindowsfreq/: main.cpp  main.rc  main.vcxproj
w7ddpatcher/: main.cpp  resource.h  w7ddpatcher.rc  w7ddpatcher.sln  w7ddpatcher.vcxproj
winmupen/: CIniReader.h  MyWindow.h  MyWindow_sdl.h  ReadMe.txt  SDL.lib  SDL2.lib  SDL_keysym.h  SDL_static.lib  emu_wtl.aps  emu_wtl.cpp  emu_wtl.rc  mupengui.sln  mupengui.vcxproj  mupengui.vcxproj.filters  pluginsview.h  pressbutton.h  resource.h  rombrowser.cpp  rombrowser.h  stdafx.cpp  stdafx.h  svn_version.h  svn_version.txt  targetver.h  zlibstat.lib
(+64 files in other folders)
